--- a/src/package.json
+++ b/src/package.json
@@ -10,9 +10,9 @@
     "start": "npm run server"
   },
   "dependencies": {
-    "angular": "1.5.9",
-    "bootstrap": "^3.3.7",
-    "angular-ui-router": "1.0.0-beta.2"
+    "angular": "^1.5.0",
+    "angular-ui-router": "1.0.0-beta.2",
+    "bootstrap": "^3.3.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
