--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "angular": "1.5.9",
+    "angular-ui-bootstrap": "^2.4.0",
+    "angular-ui-router": "1.0.0-beta.2",
     "bootstrap": "^3.3.7",
-    "angular-ui-router": "1.0.0-beta.2"
+    "jquery": "^3.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.0",
